# kabinet-server

./: CHANGELOG.md  CONFIG.md  Dockerfile  README.md  config.yaml  manage.py  mydatabase  pf.py  pyproject.toml  run-debug.sh  run.sh  tmanage.py
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-next.yaml  release.yaml
bridge/: admin.py  apps.py  backend.py  channel.py  channel_signals.py  channels.py  directives.py  enums.py  filters.py  gateways.py  inputs.py  managers.py  messages.py  models.py  scalars.py  scoping.py  signals.py  storages.py  types.py  urls.py  utils.py
bridge/backends/: base.py  consumer.py  errors.py  messages.py
bridge/migrations/: 0001_initial.py  0002_alter_flavour_repo_installedrelease.py  0002_backend_kind_backend_name_alter_pod_status.py  0002_collection_organization_definition_organization_and_more.py  0002_dockerimage_alter_flavour_image.py  0002_release_created_at_release_released_at.py  0002_remove_flavour_build_id.py  0002_statedefinition.py  0003_alter_backend_kind_alter_repo_creator.py  0003_githubrepo_added_at_githubrepo_updated_at.py  0003_remove_backend_instance_id.py  0003_remove_deployment_api_token_deployment_secret_params_and_more.py  0003_setup_delete_installedrelease.py  0004_deployment_local_id.py  0004_dockerimage_created_at_dockerimage_vetted.py  0004_pod_client_id_alter_pod_backend_resource_and_more.py  0004_setup_command_setup_instance.py  0005_alter_resource_qualifiers.py  0005_flavour_manifest.py  0005_setup_fakts_url.py  0006_flavour_requirements.py  (+6 more)
kabinet_server/: asgi.py  basepath.py  configuration.py  schema.py  settings.py  settings_test.py  urls.py
port_server/: asgi.py  schema.py  settings.py  settings_test.py
rekuest_core/: constants.py  enums.py  hash.py
tests/: conftest.py  test_config.py  test_filters.py  test_init.py  test_inspect_repo.py  test_org_scoping.py  test_pods.py  test_print_schema.py  test_queries.py  test_retrieve_repo.py  utils.py
(+39 files in other folders)
